--- a/lean-marsicano.github.io-main/HTML lean/estilo2.css
+++ b/lean-marsicano.github.io-main/HTML lean/estilo2.css
@@ -47,7 +47,7 @@ input[type="password"] {
 button {
     padding: 10px 20px;
     font-size: 18px;
-    background-color: darkblue;
+    background-color: rgb(239, 236, 58);
     color: #ffffff;
     border: none;
     border-radius: 5px;
